7145798: System.loadLibrary does not search current working directory

Append "." to java.library.path on MacOS X to ease migration from Apple's Java6 to OpenJDK7.

Reviewed-by: phh, jmelvin, coleenp